--- a/Portfolio/css/styles.css
+++ b/Portfolio/css/styles.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -6,23 +6,52 @@
 }
 
 body {
-  font-family: "Nunito", sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 
 .wrapper {
   width: 100vw;
   height: 100vh;
-  background-color: #3a1942;
+  background: rgb(130, 28, 156);
+  background: -moz-linear-gradient(
+    180deg,
+    rgba(130, 28, 156, 1) 0%,
+    rgba(203, 113, 172, 1) 100%
+  );
+  background: -webkit-linear-gradient(
+    180deg,
+    rgba(130, 28, 156, 1) 0%,
+    rgba(203, 113, 172, 1) 100%
+  );
+  background: linear-gradient(
+    180deg,
+    rgba(130, 28, 156, 1) 0%,
+    rgba(203, 113, 172, 1) 100%
+  );
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#821c9c",endColorstr="#cb71ac",GradientType=1);
   color: #fff;
 }
 
 .navbar {
   display: flex;
   justify-content: space-between;
+  padding: 2em;
+}
+
+.brand {
+  margin-top: -7px;
+  animation: flip;
+  animation-duration: 3s;
 }
 
 .brand span {
-  color: rgb(247, 176, 176);
+  color: #f7b0b0;
+}
+
+.menu {
+  display: flex;
+  width: 50%;
+  justify-content: space-around;
 }
 
 .menu li {
@@ -32,4 +61,22 @@ body {
 .menu a {
   color: #fff;
   text-decoration: none;
+  padding: 10px 20px;
+}
+
+.menu .active {
+  color: #f7b0b0;
+}
+
+.menu a:hover {
+  color: #f7b0b0;
+  transition: ease-in 0.5s;
+}
+
+.main {
+  margin: 0 auto;
+  width: 80vw;
+  height: 80vh;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
 }
