--- a/Portfolio/css/styles.css
+++ b/Portfolio/css/styles.css
@@ -126,6 +126,11 @@ body {
   color: #cfbe11;
 }
 
+.logo2:hover {
+  animation: rubberBand;
+  animation-duration: 3s;
+}
+
 .about {
   display: grid;
   grid-template-columns: repeat(10, 1fr);
@@ -168,23 +173,7 @@ body {
 .portfolio {
   width: 100%;
 
-  background: rgb(0, 0, 0);
-  background: -moz-linear-gradient(
-    180deg,
-    rgba(0, 0, 0, 1) 0%,
-    rgba(130, 28, 156, 1) 100%
-  );
-  background: -webkit-linear-gradient(
-    180deg,
-    rgba(0, 0, 0, 1) 0%,
-    rgba(130, 28, 156, 1) 100%
-  );
-  background: linear-gradient(
-    180deg,
-    rgba(0, 0, 0, 1) 0%,
-    rgba(130, 28, 156, 1) 100%
-  );
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#000000",endColorstr="#821c9c",GradientType=1);
+  background-color: black;
 }
 
 .portfolio-headings {
@@ -207,7 +196,7 @@ body {
 
 .card {
   width: 300px;
-  background-color: #6d1782;
+  background-color: #821c9c;
   border: 4px solid #cfbe11;
   height: 350px;
   margin: 1em;
@@ -269,7 +258,24 @@ body {
 }
 
 .contact-section {
-  background: #811c9b;
+  background: rgb(0, 0, 0);
+  background: -moz-linear-gradient(
+    180deg,
+    rgba(0, 0, 0, 1) 0%,
+    rgba(130, 28, 156, 1) 100%
+  );
+  background: -webkit-linear-gradient(
+    180deg,
+    rgba(0, 0, 0, 1) 0%,
+    rgba(130, 28, 156, 1) 100%
+  );
+  background: linear-gradient(
+    180deg,
+    rgba(0, 0, 0, 1) 0%,
+    rgba(130, 28, 156, 1) 100%
+  );
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#000000",endColorstr="#821c9c",GradientType=1);
+  margin-top: -7em;
 }
 
 .contact-headings {
@@ -282,10 +288,89 @@ body {
 }
 
 .container-contact {
+  padding: 3em;
   margin: 0 auto;
   width: 80vw;
-  height: 50vh;
+  height: 60vh;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   align-items: center;
+}
+
+.form-contact {
+  display: flex;
+  flex-direction: column;
+  width: 30vw;
+  margin-top: 2em;
+  margin-left: 4em;
+}
+
+.form-contact input {
+  padding: 10px 20px;
+  margin-bottom: 1em;
+  background: none;
+  border: none;
+  border-bottom: 2px solid #fff;
+  color: #fff;
+}
+
+.form-contact textarea {
+  height: 150px;
+  background: none;
+  color: #fff;
+  padding: 1.5em;
+  border: 2px solid #fff;
+}
+
+.btn-submit {
+  padding: 10px 20px;
+  margin: 1em;
+  border: none;
+  text-transform: uppercase;
+  background-color: #cfbe11;
+  border-radius: 20px;
+  color: #821c9c;
+  cursor: pointer;
+}
+
+.btn-submit:hover {
+  background-color: #fff;
+  box-shadow: none;
+  transition: ease-in 0.5s;
+}
+
+.footer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 200px;
+  background-color: #cfbe11;
+}
+
+.footer-content h2 {
+  font-size: 2em;
+}
+
+.footer-content h5 {
+  font-size: 1em;
+  text-align: center;
+}
+
+.sotial-network {
+  display: flex;
+  justify-content: space-evenly;
+  width: 300px;
+  margin-top: 1em;
+}
+
+.sotial-network i {
+  font-size: 1.5em;
+  color: black;
+}
+
+.sotial-network i:hover {
+  color: #821c9c;
+  transition: ease-in 0.5s;
 }
