--- a/Portfolio/css/styles.css
+++ b/Portfolio/css/styles.css
@@ -386,7 +386,7 @@ header ul {
 }
 
 .btn-submit:hover {
-  background-color: #fff;
+  background-color: #cfbe11;
   box-shadow: none;
   transition: ease-in 0.5s;
 }
