--- a/css/styles.css
+++ b/css/styles.css
@@ -565,6 +565,11 @@ ul.show {
   .footer h2 {
     font-size: 1.5em;
   }
+  .portfolio-headings{
+    text-align: center;
+    margin: 0;
+    padding: 0;
+  }
 }
 
 @media screen and (max-width: 858px) and (orientation: landscape) {
