--- a/css/styles.css
+++ b/css/styles.css
@@ -13,24 +13,7 @@ body {
   font-family: "Montserrat", sans-serif;
 }
 
-.wrapper {
-  width: 100%;
-  height: 100vh;
-  background: rgb(130, 28, 156);
-  background: -moz-linear-gradient(
-    180deg,
-    rgba(130, 28, 156, 1) 0%,
-    black 100%
-  );
-  background: -webkit-linear-gradient(
-    180deg,
-    rgba(130, 28, 156, 1) 0%,
-    black 100%
-  );
-  background: linear-gradient(180deg, rgba(130, 28, 156, 1) 0%, black 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#821c9c",endColorstr="#cb71ac",GradientType=1);
-  color: #fff;
-}
+/* HEADER */
 
 header {
   position: fixed;
@@ -135,6 +118,27 @@ ul.show {
   transition: ease-in 0.5s;
 }
 
+/* HOME */
+
+.wrapper {
+  width: 100%;
+  height: 100vh;
+  background: rgb(130, 28, 156);
+  background: -moz-linear-gradient(
+    180deg,
+    rgba(130, 28, 156, 1) 0%,
+    black 100%
+  );
+  background: -webkit-linear-gradient(
+    180deg,
+    rgba(130, 28, 156, 1) 0%,
+    black 100%
+  );
+  background: linear-gradient(180deg, rgba(130, 28, 156, 1) 0%, black 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#821c9c",endColorstr="#cb71ac",GradientType=1);
+  color: #fff;
+}
+
 .main {
   margin: 0 auto;
   width: 80vw;
@@ -180,20 +184,7 @@ ul.show {
   color: #cfbe11;
 }
 
-.logo2 {
-  font-size: 8em;
-  color: #fff;
-  cursor: default;
-}
-
-.logo2 span {
-  color: #cfbe11;
-}
-
-.logo2:hover {
-  animation: rubberBand;
-  animation-duration: 3s;
-}
+/* ABOUT ME */
 
 .about {
   display: grid;
@@ -207,7 +198,7 @@ ul.show {
 .about img {
   height: auto;
   width: 80%;
-  grid-column: 1/5;
+  grid-column: 2/5;
   border: 7px solid #cfbe11;
 }
 
@@ -234,6 +225,8 @@ ul.show {
   margin-bottom: 1em;
   font-size: 1.2em;
 }
+
+/* PROJECTS */
 
 .portfolio {
   width: 100%;
@@ -265,15 +258,18 @@ ul.show {
   border: 4px solid #cfbe11;
   height: 350px;
   margin: 1em;
+  box-shadow: 2px 3px 10px 3px rgb(54, 54, 54);
 }
 
 .card__img {
   background-color: #fff;
+  display: flex;
+  justify-content: center;
 }
 
 .card__img img {
-  width: 100%;
-  height: 150px;
+  width: auto;
+  height: 140px;
 }
 
 .card__title h2 {
@@ -322,6 +318,8 @@ ul.show {
   transition: ease-in 0.5s;
 }
 
+/* CONTACT */
+
 .contact-section {
   background: rgb(0, 0, 0);
   background: -moz-linear-gradient(
@@ -342,6 +340,21 @@ ul.show {
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#000000",endColorstr="#821c9c",GradientType=1);
 }
 
+.logo2 {
+  font-size: 8em;
+  color: #fff;
+  cursor: default;
+}
+
+.logo2 span {
+  color: #cfbe11;
+}
+
+.logo2:hover {
+  animation: rubberBand;
+  animation-duration: 3s;
+}
+
 .contact-headings {
   margin-left: 7em;
 }
@@ -356,8 +369,8 @@ ul.show {
   margin: 0 auto;
   width: 80vw;
   height: 55vh;
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  display: flex;
+  justify-content: space-around;
   align-items: center;
 }
 
@@ -404,13 +417,15 @@ ul.show {
   transition: ease-in 0.5s;
 }
 
+/* FOOTER */
+
 .footer {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 200px;
+  height: 150px;
   background-color: #cfbe11;
 }
 
@@ -445,7 +460,9 @@ ul.show {
   font-family: "Montserrat", sans-serif;
 }
 
-@media screen and (max-width: 480px) {
+/* RESPONSIVE MOBILE */
+
+@media screen and (max-width: 500px) {
   .btn-menu {
     display: inline-flex;
   }
@@ -542,12 +559,38 @@ ul.show {
     margin-left: 0em;
   }
 
+  .portfolio {
+    height: 100%;
+  }
+
+  .portfolio-headings {
+    margin: 0;
+    padding: 0;
+  }
+
+  .portfolio-headings h2 {
+    text-align: center;
+  }
+
+  .portfolio .container {
+    display: grid;
+  }
+  .card {
+    width: 70vw;
+    height: auto;
+  }
+
   .container-contact {
+    margin-top: 15em;
     display: flex;
     align-items: center;
     justify-content: center;
     width: 100%;
-    height: 55vh;
+    height: 40vh;
+  }
+
+  .contact-headings {
+    margin-top: 25em;
   }
 
   .form-contact {
@@ -555,7 +598,7 @@ ul.show {
     align-items: center;
     justify-content: center;
     width: 100%;
-    margin-top: 2em;
+    margin-top: -10em;
     margin-left: 0;
   }
 
@@ -565,7 +608,7 @@ ul.show {
   .footer h2 {
     font-size: 1.5em;
   }
-  .portfolio-headings{
+  .portfolio-headings {
     text-align: center;
     margin: 0;
     padding: 0;
