--- a/css/styles.css
+++ b/css/styles.css
@@ -469,6 +469,7 @@ ul.show {
   position: fixed;
   bottom: 20px;
   right: 20px;
+  padding: 10px;
 }
 
 .btn-lan {
@@ -480,13 +481,16 @@ ul.show {
   transition: all 500ms ease;
 }
 
-.btn-lan p {
-  font-size: 1.5em;
+.btn-lan.en {
+  font-size: 1.2em;
   color: #111;
   font-weight: bold;
-  letter-spacing: -1px;
 }
-
+.btn-lan.es {
+  font-size: 1.2em;
+  color: #111;
+  font-weight: bold;
+}
 .btn-lan:hover {
   box-shadow: 0px 1px 10px rgb(255, 255, 255);
 }
