--- a/css/styles.css
+++ b/css/styles.css
@@ -202,6 +202,7 @@ ul.show {
   height: auto;
   width: 80%;
   grid-column: 2/5;
+  border-radius: 30px;
   border: 7px solid #cfbe11;
 }
 
@@ -258,6 +259,7 @@ ul.show {
 .card {
   width: 300px;
   background-color: #821c9c;
+  border-radius: 30px;
   border: 4px solid #cfbe11;
   height: 350px;
   margin: 1em;
@@ -268,6 +270,8 @@ ul.show {
   background-color: #fff;
   display: flex;
   justify-content: center;
+  border-top-right-radius: 30px;
+  border-top-left-radius: 30px;
 }
 
 .card__img img {
@@ -297,7 +301,8 @@ ul.show {
 
 .card__projects-links i:hover {
   color: #cfbe11;
-  transition: ease-in 0.5s;
+
+  transition: ease-in 0.2s;
 }
 
 .card .project-details {
@@ -306,6 +311,8 @@ ul.show {
   margin: 1em;
   width: 60%;
   background-color: #fff;
+  text-decoration: none;
+  font-size: 0.9em;
 }
 
 .project-details-content {
@@ -318,7 +325,7 @@ ul.show {
 .card .project-details:hover {
   background-color: #cfbe11;
   box-shadow: none;
-  transition: ease-in 0.5s;
+  transition: ease-in 0.2s;
 }
 
 /* CONTACT */
